Threaded and logeable version of the gem

--- a/test/fixtures/systems.yml
+++ b/test/fixtures/systems.yml
@@ -1,5 +1,6 @@
 ---
-- :name: 'server.environment'
+- :name: 'server'
+  :environment: 'environment'    
   :user: 'user'
   :hosts: 
     - 'server1.system.environment'
